# libilbm

./: README.md  configure.ac  release.nix
doc/: ACBM.asc  ILBM-additions.asc  ILBM.DRNG-additions.asc  ILBM.DRNG.asc  ILBM.asc  ILBM_CMYK.txt  ILBM_CNAM.txt  ILBM_DPI.txt  Makefile.am  PBM.asc
doc/additions/: ILBM.asc  PBM.asc  README.md
doc/man/: Makefile.am  acbm2ilbm.1  ilbm2acbm.1  ilbmpack.1  ilbmpp.1
src/: Makefile.am  libilbm.pc.in  libilbm.sln
src/acbm2ilbm/: Makefile.am  acbm2ilbm.c  acbm2ilbm.h  acbm2ilbm.vcxproj  acbm2ilbm.vcxproj.filters  main.c
src/ilbm2acbm/: Makefile.am  ilbm2acbm.c  ilbm2acbm.h  ilbm2acbm.vcxproj  ilbm2acbm.vcxproj.filters  main.c
src/ilbmpack/: Makefile.am  ilbmpack.vcxproj  ilbmpack.vcxproj.filters  main.c  pack.c  pack.h
src/ilbmpp/: Makefile.am  ilbmpp.vcxproj  main.c  pp.c  pp.h
src/libilbm/: Makefile.am  bitmapheader.c  bitmapheader.h  byterun.c  byterun.h  cmykmap.c  cmykmap.h  colormap.c  colormap.h  colornames.c  colornames.h  colorrange.c  colorrange.h  cycleinfo.c  cycleinfo.h  destmerge.c  destmerge.h  dpiheader.c  dpiheader.h  drange.c  drange.h  grab.c  grab.h  ilbm.c  ilbm.h  ilbmchunkheaders.h  ilbmchunktypes.h  ilbmextensions.h  ilbmformchunktypes.h  ilbmformextensions.h  ilbmimage.c  ilbmimage.h  interleave.c  interleave.h  libilbm.def  libilbm.vcxproj  libilbm.vcxproj.filters  sprite.c  sprite.h  viewport.c  (+1 more)
tests/: Makefile.am  byterun-simple-padded.sh  byterun-simple.c  byterun-simple.sh  byterun.c  check-missing-BMHD.sh  checkilbm.c  interleave-simple-padded.sh  interleave-simple.c  interleave-simple.sh  interleave.c  missing-BMHD.ILBM  readsimpleacbm.c  readsimpleilbm.c  readsimplepbm.c  simpleacbmdata.c  simpleacbmdata.h  simpleilbmdata.c  simplepbmdata.c  simplepbmdata.h  writesimpleacbm.c  writesimpleilbm-padded.c  writesimpleilbm.c  writesimplepbm.c
