lib_LTLIBRARIES = libilbm.la
pkginclude_HEADERS = bitmapheader.h colormap.h colorrange.h cycleinfo.h destmerge.h grab.h sprite.h viewport.h byterun.h ilbm.h interleave.h ilbmimage.h drange.h

libilbm_la_SOURCES = bitmapheader.c colormap.c colorrange.c cycleinfo.c destmerge.c grab.c sprite.c viewport.c byterun.c ilbm.c interleave.c ilbmimage.c drange.c
libilbm_la_CFLAGS = $(LIBIFF_CFLAGS)
libilbm_la_LIBADD = $(LIBIFF_LIBS)
